hidden title when menu is open to avoid logo squish on small screen sizes

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -3,12 +3,13 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@media only screen and (max-width: 780px) {
   /* Don't display sub-heading-mobile above 780px width */
+/* @media only screen and (max-width: 780px) {
+
     .nav-text {
       font-size: 25px !important;
     }
-  }
+  } */
 
 /* Your custom styles go here */
 /* .nav-container {
